--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -26,7 +26,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0001"/>
 		<script>
 			// Hides fallback nav so that it only appears if Javascript disabled
-			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#FB{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
+			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#navFB{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
 		</script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>	
