--- a/html/about.html
+++ b/html/about.html
@@ -43,7 +43,7 @@
 			<nav id="navFB">
 				<ul role="menubar" aria-label="Site sections">
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/site_sections.html"><i class="fa fa-bars"></i></a></button></li>
+					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 				</ul>
 			</nav>
 
@@ -70,7 +70,7 @@
 
 				<section aria-labelledby="faq">
 					<h2 id="faq">Values and Practices</h2>
-					<div><a href="/html/about/faq.html"><img loading="" src="/img/about/tiles/uvc_0024-1324px.jpg" srcset="/img/about/tiles/uvc_0024-1324px.jpg 1324w, /img/about/tiles/uvc_0024-1136px.jpg 1136w, /img/about/tiles/uvc_0024-930px.jpg 930w, /img/about/tiles/uvc_0024-814px.jpg 814w, /img/about/tiles/uvc_0024-662px.jpg 662w, /img/about/tiles/uvc_0024-568px.jpg 568w, /img/about/tiles/uvc_0024-530px.jpg 530w, /img/about/tiles/uvc_0024-465px.jpg 465w, /img/about/tiles/uvc_0024-407px.jpg 407w, /img/about/tiles/uvc_0024-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Complex flower array with red, pink, white, yellow, blue, and purple flowers." title="Jones, Owen. “Indian No. 6.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate LIV, https://archive.org/details/grammarornament00Jone. Public Domain."/></a></div>
+					<div><a href="/html/about/values_practices.html"><img loading="" src="/img/about/tiles/uvc_0024-1324px.jpg" srcset="/img/about/tiles/uvc_0024-1324px.jpg 1324w, /img/about/tiles/uvc_0024-1136px.jpg 1136w, /img/about/tiles/uvc_0024-930px.jpg 930w, /img/about/tiles/uvc_0024-814px.jpg 814w, /img/about/tiles/uvc_0024-662px.jpg 662w, /img/about/tiles/uvc_0024-568px.jpg 568w, /img/about/tiles/uvc_0024-530px.jpg 530w, /img/about/tiles/uvc_0024-465px.jpg 465w, /img/about/tiles/uvc_0024-407px.jpg 407w, /img/about/tiles/uvc_0024-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Complex flower array with red, pink, white, yellow, blue, and purple flowers." title="Jones, Owen. “Indian No. 6.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate LIV, https://archive.org/details/grammarornament00Jone. Public Domain."/></a></div>
 				</section>
 
 				<section aria-labelledby="bibliography">
