--- a/html/about/founding_organizers.html
+++ b/html/about/founding_organizers.html
@@ -36,7 +36,7 @@
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
-		<div class="text-container content about biographies">
+		<div class="text-container content about organizers">
 
 			<div data-include="nav"></div>
 
