--- a/html/lesson_plans/africa_slavery_theories.html
+++ b/html/lesson_plans/africa_slavery_theories.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Slavery and Victorian Theories of Sexuality, Desire, and the Family | Undisciplining the Victorian Classroom</title>
+    <title>Slavery and Theories of Sexuality, Desire, and the Family | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Uses Clotel to consider how the experience of enslavement contributes to existing conversations in Victorian studies about sexuality, desire, and the family."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
-						<h2 class="bottom" id="lesson-plan">Slavery and Victorian Theories of Sexuality, Desire, and the Family</h2>
+						<h2 class="bottom" id="lesson-plan">Slavery and Theories of Sexuality, Desire, and the Family</h2>
           	<img loading="" style="object-position: 50% 60%;" src="/img/lesson_plans/uvc_0014-1500px.jpg" srcset="/img/lesson_plans/uvc_0014-1500px.jpg 1500w, /img/lesson_plans/uvc_0014-1350px.jpg 1350w, /img/lesson_plans/uvc_0014-1200px.jpg 1200w, /img/lesson_plans/uvc_0014-1050px.jpg 1050w, /img/lesson_plans/uvc_0014-900px.jpg 900w, /img/lesson_plans/uvc_0014-750px.jpg 750w, /img/lesson_plans/uvc_0014-600px.jpg 600w, /img/lesson_plans/uvc_0014-450px.jpg 450w, /img/lesson_plans/uvc_0014-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Woman jumping from bridge into water surrounded by men with arms outstretched to catch and stop her." title="Anonymous. “The Death of Clotel.” Clotelle; or, The Colored Heroine: A Tale of the Southern States, by William Wells Brown, Lee & Shepard, 1867, frontispiece, https://babel.hathitrust.org/cgi/pt?id=uc2.ark:/13960/t4kk94s0d&view=1up&seq=8. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
@@ -171,7 +171,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Carolyn Betensky, lesson plan dev. “Slavery and Victorian Theories of Sexuality, Desire, and the Family.” Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/africa_slavery_theories.html">https://undiscipliningvc.org/html/lesson_plans/africa_slavery_theories.html</a>.</p>
+						<p>Carolyn Betensky, lesson plan dev. “Slavery and Theories of Sexuality, Desire, and the Family.” Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/africa_slavery_theories.html">https://undiscipliningvc.org/html/lesson_plans/africa_slavery_theories.html</a>.</p>
 					</section>
 			</main>
 			
