--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
-						<h2 id="lesson-plan">Southern  Africa, 1820–1930</h2>
+						<h2 id="lesson-plan" class="fit">Southern  Africa, 1820–1930</h2>
           	<img loading="" style="object-position: 50% 52.5%;" src="/img/lesson_plans/uvc_0019-1800px.jpg" srcset="/img/lesson_plans/uvc_0019-1800px.jpg 1800w, /img/lesson_plans/uvc_0019-1650px.jpg 1650w, /img/lesson_plans/uvc_0019-1500px.jpg 1500w, /img/lesson_plans/uvc_0019-1350px.jpg 1350w, /img/lesson_plans/uvc_0019-1200px.jpg 1200w, /img/lesson_plans/uvc_0019-1050px.jpg 1050w, /img/lesson_plans/uvc_0019-900px.jpg 900w, /img/lesson_plans/uvc_0019-750px.jpg 750w, /img/lesson_plans/uvc_0019-600px.jpg 600w, /img/lesson_plans/uvc_0019-450px.jpg 450w, /img/lesson_plans/uvc_0019-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Printed color map of South Africa with red lines showing routes of travel." title="Anonymous. Map of “South Africa.” South Africa and How to Reach It by the Castle Line, by Edward P. Mathers, Simpkin, 1889, opp. contents page. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
@@ -95,9 +95,9 @@
 
 						<p>Beginning with British settler poetry and concluding with the earliest full-length novel in English by a Black South African, this lesson plan explores issues of race, belonging, gender, and agency. It covers the period between the arrival of five thousand British settlers in the early 1820s and the first two decades that followed the 1910 formation of the Union of South Africa. It includes fiction or poetry (and in most cases also non-fiction) by six authors, who are variously Scottish, British South African, English, Zulu, and Tswana. Students could be asked to consider settler identity, including its relationship to indigeneity and the metropole. They could reflect on Olive Schreiner’s changing attitude to Boers and Black Africans. They could compare indigenous and white writers’ depictions of conflict, race, space, religion, gender, and history.&nbsp;</p>
 
-						<p>The lesson plan is designed to be flexible. Instructors could select just a few of the suggested texts if they want to teach a unit on southern Africa rather than a whole course—in a course on literature of the British empire in the long nineteenth century, for instance. They could pair one of the suggested texts with a later South African text: <em>An African Tragedy</em> with Alan Paton’s <em>Cry, The Beloved Country</em> (1948), which both explore the perils of city life for Black South Africans, or Pringle’s <em>Narrative of a Residence in South Africa</em> with Zoë Wicomb’s <em>Still Life</em> (1920), an historical novel about Pringle told from multiple perspectives, including that of Mary Prince, a formerly enslaved West Indian born woman whose narrative he edited.</p>
+						<p>The lesson plan is designed to be flexible. Instructors could select just a few of the suggested texts if they want to teach a unit on southern Africa rather than a whole course—in a course on literature of the British empire in the long nineteenth century, for instance. They could pair one of the suggested texts with a later South African text: <em>An African Tragedy</em> with Alan Paton’s <em>Cry, The Beloved Country</em> (1948), which both explore the perils of city life for Black South Africans, or Pringle’s <em>Narrative of a Residence in South Africa</em> with Zoë Wicomb’s <em>Still Life</em> (1920), an historical novel about Pringle told from multiple perspectives, including that of Mary Prince, a formerly enslaved West Indian-born woman whose narrative he edited.</p>
 							
-						<p>Any of the suggested texts could bring southern Africa into a conversation that is not primarily about southern Africa. For example, Pringle’s poetry could be included in a unit, a week, or even just a day on abolition poetry by William Cowper, Elizabeth Barrett Browning, and others. Schreiner’s short story “Eighteen-Ninety-Nine” could be paired with a short story from the American Civil War, perhaps one focused on the women left behind when the men go off to fight or one that is sympathetic to “the other side.” Bessie Marchant’s <em>Molly of One Tree Bend</em> could be read alongside contemporaneous young adult fiction, such as Frances Hodgson Burnett’s <em>The Secret Garden</em> (1911), with which it has much in common, or pretty much anything by G. A. Henty. <em>Mhudi</em> could be compared to Chinua Achebe’s <em>Things Fall Apart</em> (1958), which also depicts shifting power dynamics in nineteenth century Africa.</p>
+						<p>Any of the suggested texts could bring southern Africa into a conversation that is not primarily about southern Africa. For example, Pringle’s poetry could be included in a unit, a week, or even just a day on abolition poetry by William Cowper, Elizabeth Barrett Browning, and others. Schreiner’s short story “Eighteen-Ninety-Nine” could be paired with a short story from the American Civil War, perhaps one focused on the women left behind when the men go off to fight or one that is sympathetic to “the other side.” Bessie Marchant’s <em>Molly of One Tree Bend</em> could be read alongside contemporaneous young adult fiction, such as Frances Hodgson Burnett’s <em>The Secret Garden</em> (1911), with which it has much in common, or pretty much anything by G. A. Henty. <em>Mhudi</em> could be compared to Chinua Achebe’s <em>Things Fall Apart</em> (1958), which also depicts shifting power dynamics in nineteenth-century Africa.</p>
 
 					</section>
 
@@ -107,17 +107,17 @@
             <section aria-labelledby="materials-1">
               <h4 id="materials-1">Thomas Pringle</h4>
 
-							<p><a href="https://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_25"><em>Song of the Wild Bushman</em></a>. 1825.<br/>
+							<p>“<a href="https://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_25">Song of the Wild Bushman</a>.” 1825.<br/>
 
-							<a href="https://archive.org/details/poeticalworksoft00prin/page/58/mode/2up"><em>The Slave Dealer</em></a>. 1828.<br/>
+							“<a href="https://archive.org/details/poeticalworksoft00prin/page/58/mode/2up">The Slave Dealer</a>.” 1828.<br/>
 
-							<a href="http://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_36"><em>The Kosa</em></a>. 1828<br/>
+							“<a href="http://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_36">The Kosa</a>.” 1828<br/>
 
-							<a href="https://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_4"><em>The Bechuana Boy</em></a>. 1830.<br/>
+							“<a href="https://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_4">The Bechuana Boy</a>.” 1830.<br/>
 								<span class="annotation">One of the original 1820 Cape Colony settlers, Pringle became an influential publisher before returning to Britain because of censorship disputes with the local administration. He was a prominent abolitionist and the editor of <em>The History of Mary Prince</em> (1831), the first slave narrative by a Black woman published in Britain. In addition to writing poetry that was overtly anti-slavery (as in “The Slave Dealer” and “The Bechuana Boy”), Pringle also wrote poetry describing Africans on their native lands (“Song of the Wild Bushman” and “The Kosa”).</span>
 							</p>
 
-							<p><a href="https://www.google.com/books/edition/Narrative_of_a_Residence_in_South_Africa/veoxAQAAMAAJ?hl=en&gbpv=1&printsec=frontcover"><em>Narrative of a Residence in South Africa</em></a>. New, William Tegg & Co., 1851.<br/>
+							<p><a href="https://www.google.com/books/edition/Narrative_of_a_Residence_in_South_Africa/veoxAQAAMAAJ?hl=en&gbpv=1&printsec=frontcover"><em>Narrative of a Residence in South Africa</em></a>. 1834. New ed., Tegg, 1851. <a href="Also available from https://archive.org/details/narrativearesid00condgoog/page/n6/mode/2up">Alternate version</a>.<br/>
 								<span class="annotation">Pringle’s first-hand account offers insight into settler colonial life.</span>
 							</p>
             </section>
@@ -186,13 +186,13 @@
 					<section aria-labelledby="biography">
 						<h3 id="biography">Developer Biography</h3>
 
-						<p><a href="https://english.asu.edu/content/melissa-free">Melissa Free</a> is Assistant Professor of English, Affiliate Faculty in the School of Social Transformation, and Barrett Honors College Faculty at Arizona State University. Her monograph, <a href="https://www.sunypress.edu/p-6981-beyond-gold-and-diamonds.aspx"><em>Beyond Gold and Diamonds: Genre, the Authorial Informant, and the British South African Novel</em></a>, was published by State University of New York Press in 2021. She is the editor of a Broadview Anthology of British Literature edition, <a href="https://broadviewpress.com/product/the-dead-and-other-stories/#tab-description"><em>The Dead and Other Stories</em></a>, by James Joyce. Her scholarly articles and book chapters have appeared in such places as <a href="https://www.cambridge.org/core/journals/victorian-literature-and-culture/article/settler-colonialism/3BDA9AA967E171B915F4C96FA04077B7"><em>Victorian Literature and Culture</em></a>, <em>Victorian Studies</em>, <em>Genre</em>, and <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-victorian-literary-culture-9780199593736?cc=us&amp;lang=en&amp;"><em>The Oxford Handbook of Victorian Literary Culture</em></a>, edited by Juliet John. Her primary academic interests are Victorian literature and culture, twentieth-century British literature and culture, postcolonial studies, gender and women's studies, and genre studies.</p>
+						<p><a href="https://english.asu.edu/content/melissa-free">Melissa Free</a> is Assistant Professor of English, Affiliate Faculty in the School of Social Transformation, and Barrett Honors College Faculty at Arizona State University. Her monograph, <a href="https://www.sunypress.edu/p-6981-beyond-gold-and-diamonds.aspx"><em>Beyond Gold and Diamonds: Genre, the Authorial Informant, and the British South African Novel</em></a>, was published by State University of New York Press in 2021. She is the editor of a Broadview Anthology of British Literature edition, <a href="https://broadviewpress.com/product/the-dead-and-other-stories/#tab-description"><em>The Dead and Other Stories</em></a>, by James Joyce. Her scholarly articles and book chapters have appeared in such places as <a href="https://www.cambridge.org/core/journals/victorian-literature-and-culture/article/settler-colonialism/3BDA9AA967E171B915F4C96FA04077B7"><em>Victorian Literature and Culture</em></a>, <em>Victorian Studies</em>, <em>Genre</em>, and <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-victorian-literary-culture-9780199593736?cc=us&amp;lang=en&amp;"><em>The Oxford Handbook of Victorian Literary Culture</em></a>, edited by Juliet John. Her primary academic interests are Victorian literature and culture, twentieth-century British literature and culture, postcolonial studies, gender and women’s studies, and genre studies.</p>
 					</section>
 
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Anonymous. Map of “South Africa.” <em>South Africa and How to Reach It by the Castle Line</em>, by Edward P. Mathers, Simpkin, 1889, opp. contents page. Public domain. In describing southern Africa as “South Africa” when not referring specifically to the Union of South Africa (formed in 1910), the British elided the region's indigenous territories and (for most of the nineteenth century) Boer republics.</p>
+						<p>Anonymous. Map of “South Africa.” <em>South Africa and How to Reach It by the Castle Line</em>, by Edward P. Mathers, Simpkin, 1889, opp. contents page. Public domain. In describing southern Africa as “South Africa” when not referring specifically to the Union of South Africa (formed in 1910), the British elided the region’s indigenous territories and (for most of the nineteenth century) Boer republics.</p>
 					</section>
 
 					<section aria-labelledby="citation">
@@ -206,6 +206,9 @@
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
 		
+		<style>
+			h2.fit{width:min-content}@media only screen and (min-width: 400px){h2.fit{width:fit-content}}
+		</style>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
