--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -68,7 +68,7 @@
 				<section aria-labelledby="literary-1">
 					<h2 id="literary-1">Beyond the Literary #1</h2>
 					<div><a href="/html/zoomcasts/rudy.html"><img loading="lazy" src="/img/zoomcasts/rudy-930px.jpg" srcset="/img/zoomcasts/rudy-930px.jpg 930w, /img/zoomcasts/rudy-816px.jpg 816w, /img/zoomcasts/rudy-663px.jpg 663w, /img/zoomcasts/rudy-532px.jpg 532w, /img/zoomcasts/rudy-465px.jpg 465w, /img/zoomcasts/rudy-408px.jpg 408w, /img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
-					<p>Jason Rudy and Ryan Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
+					<p>Jason Rudy and Ryan D. Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
 				</section>
 
 				<section aria-labelledby="positionality-2">
@@ -80,7 +80,7 @@
 				<section aria-labelledby="literary-2">
 					<h2 id="literary-2">Beyond the Literary #2</h2>
 					<div><a href="/html/zoomcasts/brice-hayward-reeder.html"><img loading="lazy" src="/img/zoomcasts/brice-hayward-reeder-930px.jpg" srcset="/img/zoomcasts/brice-hayward-reeder-1275px.jpg 1275w, /img/zoomcasts/brice-hayward-reeder-930px.jpg 930w, /img/zoomcasts/brice-hayward-reeder-816px.jpg 816w, /img/zoomcasts/brice-hayward-reeder-663px.jpg 663w, /img/zoomcasts/brice-hayward-reeder-532px.jpg 532w, /img/zoomcasts/brice-hayward-reeder-465px.jpg 465w, /img/zoomcasts/brice-hayward-reeder-408px.jpg 408w, /img/zoomcasts/brice-hayward-reeder-266px.jpg 266w" alt="Head and shoulders images of Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" title="Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder"/><span>Michelle Prain Brice, Jennifer Hayward, Jessie Reeder</span></a></div>
-					<p>Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder speak with Ryan Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
+					<p>Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder speak with Ryan D. Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
 				</section>
 
 			</main>
