--- a/html/zoomcasts/brice-hayward-reeder.html
+++ b/html/zoomcasts/brice-hayward-reeder.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Zoomcast with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder speak with Ryan Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”"/>
+		<meta name="description" content="Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder speak with Ryan D. Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
@@ -66,7 +66,7 @@
 				<section class="specs" aria-labelledby="zoomcast-production-details">
 					<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 					<div class="specs-container">
-						<p id="text"><strong>Speakers:</strong> Michelle Prain Brice (guest), Jennifer Hayward (guest), and Jessie Reeder (guest), Ryan Fong (host)</p>
+						<p id="text"><strong>Speakers:</strong> Michelle Prain Brice (guest), Jennifer Hayward (guest), and Jessie Reeder (guest), Ryan D. Fong (host)</p>
 						<p><strong>Date:</strong> February 25, 2021</p>
 						<p><strong>Length:</strong> 35:39</p>
 						<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
@@ -87,7 +87,7 @@
 
 				<summary aria-labelledby="overview">
 					<h3 id="overview">Zoomcast Overview</h3>
-					<p>Ryan Fong speaks with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder, the three creators of <a href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Brice, Hayward, and Reeder also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
+					<p>Ryan D. Fong speaks with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder, the three creators of <a href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Brice, Hayward, and Reeder also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
 				</summary>
 
 				<section aria-labelledby="series">
@@ -118,7 +118,7 @@
 
 				<section class="smaller" aria-labelledby="citation">
 					<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-					<p>“Zoomcast with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/brice-hayward-reeder.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/brice-hayward-reeder.html</a>.</p>
+					<p>“Zoomcast with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/brice-hayward-reeder.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/brice-hayward-reeder.html</a>.</p>
 				</section>
 			</main>
 			
