--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Zoomcast with Jason Rudy | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Jason Rudy and Ryan Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia."/>
+		<meta name="description" content="Jason Rudy and Ryan D. Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
@@ -66,7 +66,7 @@
 					<section class="specs" aria-labelledby="zoomcast-production-details">
 						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<div class="specs-container">
-							<p id="text"><strong>Speakers:</strong> Jason Rudy (guest), Ryan Fong (host)</p>
+							<p id="text"><strong>Speakers:</strong> Jason Rudy (guest), Ryan D. Fong (host)</p>
 							<p><strong>Date:</strong> February 4, 2021</p>
 							<p><strong>Length:</strong> 40:50</p>
 							<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
@@ -87,7 +87,7 @@
 
 					<summary aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
-						<p>Ryan Fong interviews Jason Rudy, Professor of English at the University of Maryland, College Park. In their conversation, they discuss how each of them came to study nineteenth-century Australia and to do so through an Indigenous-centered lens. They focus on the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia, both within the nineteenth century and in contemporary contexts.  By showing how visual works function as both archival records and interventions into colonial accounts of history, Rudy and Fong talk about they have incorporated these materials into their teaching.  Rudy also discusses the impact that his relationship with Indigenous artist Gordon Syron has had on his thinking, research, and teaching, especially as Rudy has worked with Syron on writing the artist’s biography.</p>
+						<p>Ryan D. Fong interviews Jason Rudy, Professor of English at the University of Maryland, College Park. In their conversation, they discuss how each of them came to study nineteenth-century Australia and to do so through an Indigenous-centered lens. They focus on the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia, both within the nineteenth century and in contemporary contexts.  By showing how visual works function as both archival records and interventions into colonial accounts of history, Rudy and Fong talk about they have incorporated these materials into their teaching.  Rudy also discusses the impact that his relationship with Indigenous artist Gordon Syron has had on his thinking, research, and teaching, especially as Rudy has worked with Syron on writing the artist’s biography.</p>
 					</summary>
 					
 					<section aria-labelledby="series">
@@ -118,7 +118,7 @@
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/rudy.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
+						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/rudy.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
 					</section>
 			</main>
 			
