--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<h2 id="founders">Founding Developers</h2>
 					<ul>
 						<li><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)</li>
-						<li><strong>Ryan Fong</strong> (Kalamazoo College)</li>
+						<li><strong>Ryan D. Fong</strong> (Kalamazoo College)</li>
 						<li><strong>Sophia Hsu</strong> (Lehman College, CUNY)</li>
 						<li><strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</li>
 					</ul>
@@ -175,7 +175,7 @@
 
 				<section class="smaller" aria-labelledby="citation">
 					<h2 id="citation">Page Citation (MLA)</h2>
-					<p>Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
+					<p>Pearl Chaozon Bauer, Ryan D. Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
 				</section>
 			</main>
 			
