--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"  referrerpolicy="no-referrer"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0006"/>
+		<link rel="stylesheet" type="text/css" href="/css/index.css?=newVers_0001"/>
 		<link rel="stylesheet" type="text/css" href="/css/carousel.css?=newVers_0001"/>
 	</head>
 
