--- a/0_dev/python-files/0_syllabus-template-3.html
+++ b/0_dev/python-files/0_syllabus-template-3.html
@@ -109,7 +109,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>{developer}, dev. “{title}.” {peer-reviewer}, peer rev.; {syllabus-cluster-dev}, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/syllabi/{syllabus-file-name}.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/{syllabus-file-name}.html</a>.</p><!-- Change -->
+					<p>{developer}, dev. “{title}.” {peer-reviewer}, peer rev.; {syllabus-cluster-dev}, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/syllabi/{syllabus-webpage-name}.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/{syllabus-webpage-name}.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
